tests/parser/invalidinput/multidecl.idp
include <mx>

vocabulary V{
	type Struct isa
}

procedure main(){
	return 1
}
